# liblogs

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: mkpackage.cmake
include/liblogs/: colors.hpp  control.hpp  formatter.hpp  initializer.hpp  liblogsconfig.hpp  liblogsglobal.hpp  logger.hpp  logs.hpp  message.hpp  types.hpp  writer.hpp
include/liblogs/formatters/: colored_terminal_formatter.hpp  terminal_formatter.hpp
include/liblogs/loggers/: global_logger.hpp  unique_logger.hpp
include/liblogs/writers/: file_writer.hpp  syslog_writer.hpp  terminal_writer.hpp
src/: CMakeLists.txt  colored_terminal_formatter.cpp  colors.cpp  colors.hpp  control.cpp  file_writer.cpp  formatter.cpp  global_logger.cpp  initializer.cpp  logs.cpp  output.cpp  output.hpp  syslog_writer.cpp  terminal_formatter.cpp  terminal_writer.cpp  unique_logger.cpp  writer.cpp
tests/: CMakeLists.txt  main.cpp
